Add content to contact and activities pages

--- a/accommodations.html
+++ b/accommodations.html
@@ -8,27 +8,27 @@
     <ul>
       <li><a href="index.html">Main</a></li>
       <li><a href="activities.html">Activities</a></li>
-      <li><a href="travel.html">Travel Arrangments</a></li>
+      <li><a href="travel.html">Travel Arrangements</a></li>
       <li><a href="pictures.html">Photos</a></li>
       <li><a href="contact.html">Contact Us</a></li>
     </ul>
     <p>Here at the Private Island Ice Resort, we pride ourselves on having several different options to suit a variety of needs so long as those needs include spending copious amounts of money and being quite chilly while doing so: </p>
 
     <h3>You can choose from the following options: </h3>
-    <ul>
+    <ol>
       <li>Structurally Unsound Ice Caves</li>
       <li>Flimsy Tents Made of Hand-Embroidered Silk</li>
       <li>Finely Appointed Ice Huts</li>
       <li>Fashionably Modern Ice Condos</li>
       <li>Excessively Huge Ice Palaces</li>
-    </ul>
+    </ol>
 
     <p>All accommodations include the following amenities: </p>
-    <ul>
+    <ol>
       <li>Ice Maker</li>
       <li>Ice Chest</li>
       <li>Ice</li>
       <li>Ice Cold WiFi</li>
-    </ul>
+    </ol>
   </body>
 </html>
