--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
       <li><a href="accommodations.html">Accommodations</a></li>
       <li><a href="activities.html">Activities</a></li>
-      <li><a href="travel.html">Travel Arrangments</a></li>
+      <li><a href="travel.html">Travel Arrangements</a></li>
       <li><a href="pictures.html">Photos</a></li>
       <li><a href="contact.html">Contact Us</a></li>
     </ul>
