add images to index and accommodations pages

--- a/accommodations.html
+++ b/accommodations.html
@@ -13,7 +13,7 @@
       <li><a href="contact.html">Contact Us</a></li>
     </ul>
     <p>Here at the Private Island Ice Resort, we pride ourselves on having several different options to suit a variety of needs so long as those needs include spending copious amounts of money and being quite chilly while doing so: </p>
-
+    <img src="img/icecave.jpg" alt="Image of an ice cave-actually in Iceland">
     <h3>You can choose from the following options: </h3>
     <ol>
       <li>Structurally Unsound Ice Caves</li>
@@ -22,7 +22,7 @@
       <li>Fashionably Modern Ice Condos</li>
       <li>Excessively Huge Ice Palaces</li>
     </ol>
-
+    <img src="img/iceroom.jpg" alt="Image of bedroom made of ice-actually from a hotel in Sweden">
     <p>All accommodations include the following amenities: </p>
     <ol>
       <li>Ice Maker</li>
