--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="contact.html">Contact Us</a></li>
     </ul>
     <h2>For all of your totally legal resort needs.</h2>
+    <img src="img/iceisland.jpg" alt="A photo of an ice island">
     <p>Are you troubled by the giant piles of money all over your ridculously opulent mansion? Are you tired of simply using your excess money as a swimming pool? Do you also happen to hate sunshine and warmth? We have the perfect solution: our private winter getaway. Never be warm again; come visit us at the Private Island Ice Resort where we will keep the snow falling and the temperature below freezing. Sleep in an ice hut or play in a snowball fight, we have it all, except for sunshine.</p>
   </body>
 </html>
