add images activities and pictures pages

--- a/activities.html
+++ b/activities.html
@@ -13,6 +13,7 @@
       <li><a href="contact.html">Contact Us</a></li>
     </ul>
     <p>What does one do at a totally legal private island ice resort? So glad that you asked! There are many diverse ways to be amused and stay cold! Here are a just a few of the activities that we provide for you at a very unreasonable price!</p>
+    <img src="img/polarbear.jpg" alt="A photo of some polar bears">
     <ol>
       <li>Ice pools</li>
       <li>Polar Bear Petting Zoo*</li>
@@ -20,6 +21,7 @@
       <li>Luxury Ice Tasting</li>
       <li>Our world famous Ice Boutique</li>
     </ol>
+    <img src="img/fancyice.jpg" alt="A photo of some fancy ice (very expensive)">
     <h6>*We are not responsible or liable for any and all harm and/or injuries sustained at the Polar Bear Petting Zoo, including but not limited to death, dismemberment, mental or emotional trauma. Have fun!</h6>
   </body>
 </html>
