--- a/pictures.html
+++ b/pictures.html
@@ -13,5 +13,9 @@
       <li><a href="contact.html">Contact Us</a></li>
     </ul>
     <!--insert photos here-->
+    <img src="img/people1.jpg" alt="people enjoying a fun trek across a barren snow-covered wasteland"><br>
+    <img src="img/people2.jpg" alt="person obscured by blizzard"><br>
+    <img src="img/people3.jpg" alt="people, probably bros, swimming in snow"><br>
+    <img src="img/people4.jpg" alt="people in a storm I think">
   </body>
 </html>
