add images to travel page

--- a/travel.html
+++ b/travel.html
@@ -14,5 +14,6 @@
     </ul>
     <p>Once you have booked your trip via carrier penguin, it is time to be on your way! Luxuriosly appointed, yet discreet galleons manned by only our most trusted servants leave Miami every 6th Wednesday at the crack of noon. These ships are outfitted with the most 17th century of technology and can make the trip in only a fortnight! Merely present your confirmation, along with the customary $10,000 "gift" to the captain. Make sure you pack your coat! We'll take care of the rest!</p>
     <p>Long-Term Parking available for a mere $5,000/day</p>
+    <img src="img/galleon.jpg" alt="a (replica of a) Spanish galleon in the ocean">
   </body>
 </html>
