--- a/activities.html
+++ b/activities.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Private Island Ice Resort: Activities</title>
   </head>
   <body>
