update styling and README

--- a/activities.html
+++ b/activities.html
@@ -5,15 +5,16 @@
     <title>Private Island Ice Resort: Activities</title>
   </head>
   <body>
-    <h1>Activities</h1>
-    <ul>
-      <li><a href="index.html">Main</a></li>
-      <li><a href="accommodations.html">Accommodations</a></li>
-      <li><a href="travel.html">Travel Arrangements</a></li>
-      <li><a href="pictures.html">Photos</a></li>
-      <li><a href="contact.html">Contact Us</a></li>
-    </ul>
-    <p>What does one do at a totally legal private island ice resort? So glad that you asked! There are many diverse ways to be amused and stay cold! Here are a just a few of the activities that we provide for you at a very unreasonable price!</p>
+      <h1><a href="index.html">A Private Island Ice Resort</a></h1>
+      <ul>
+        <li><a href="accommodations.html">Accommodations</a></li>
+        <li><a href="activities.html">Activities</a></li>
+        <li><a href="travel.html">Travel Arrangements</a></li>
+        <li><a href="pictures.html">Photos</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+      <h2>Activities</h2>
+    <p>What does one do at a private island ice resort? So glad that you asked! There are many diverse ways to be amused and stay cold! Here are a just a few of the activities that we provide for you at a very unreasonable price!</p>
     <img src="img/polarbear.jpg" alt="A photo of some polar bears">
     <ol>
       <li>Ice pools</li>
@@ -25,4 +26,9 @@
     <img src="img/fancyice.jpg" alt="A photo of some fancy ice (very expensive)">
     <h6>*We are not responsible or liable for any and all harm and/or injuries sustained at the Polar Bear Petting Zoo, including but not limited to death, dismemberment, mental or emotional trauma. Have fun!</h6>
   </body>
+  <footer>
+      <p>
+          Would you like to stay with us, or do you have questions or comments? <a href="mailto:joe@example.com?subject=feedback">email us</a>
+      </p>
+  </footer>
 </html>
