--- a/pictures.html
+++ b/pictures.html
@@ -5,18 +5,24 @@
     <title>Private Island Ice Resort: Photos</title>
   </head>
   <body>
-    <h1>Photos from our satisfied well-to-do patrons</h1>
-    <ul>
-      <li><a href="index.html">Main</a></li>
-      <li><a href="accommodations.html">Accommodations</a></li>
-      <li><a href="activities.html">Activities</a></li>
-      <li><a href="travel.html">Travel Arrangements</a></li>
-      <li><a href="contact.html">Contact Us</a></li>
-    </ul>
+      <h1><a href="index.html">A Private Island Ice Resort</a></h1>
+      <ul>
+        <li><a href="accommodations.html">Accommodations</a></li>
+        <li><a href="activities.html">Activities</a></li>
+        <li><a href="travel.html">Travel Arrangements</a></li>
+        <li><a href="pictures.html">Photos</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
     <!--insert photos here-->
+    <h2>Photos</h2>
     <img src="img/people1.jpg" alt="people enjoying a fun trek across a barren snow-covered wasteland"><br>
     <img src="img/people2.jpg" alt="person obscured by blizzard"><br>
     <img src="img/people3.jpg" alt="people, probably bros, swimming in snow"><br>
     <img src="img/people4.jpg" alt="people in a storm I think">
   </body>
+  <footer>
+      <p>
+          Would you like to stay with us, or do you have questions or comments? <a href="mailto:joe@example.com?subject=feedback">email us</a>
+      </p>
+  </footer>
 </html>
