--- a/travel.html
+++ b/travel.html
@@ -5,16 +5,21 @@
     <title>Private Island Ice Resort: Travel Arrangements</title>
   </head>
   <body>
-    <h1>Travel Arrangements</h1>
-    <ul>
-      <li><a href="index.html">Main</a></li>
-      <li><a href="accommodations.html">Accommodations</a></li>
-      <li><a href="activities.html">Activities</a></li>
-      <li><a href="pictures.html">Photos</a></li>
-      <li><a href="contact.html">Contact Us</a></li>
-    </ul>
-    <p>Once you have booked your trip via carrier penguin, it is time to be on your way! Luxuriosly appointed, yet discreet galleons manned by only our most trusted servants leave Miami every 6th Wednesday at the crack of noon. These ships are outfitted with the most 17th century of technology and can make the trip in only a fortnight! Merely present your confirmation, along with the customary $10,000 "gift" to the captain. Make sure you pack your coat! We'll take care of the rest!</p>
-    <p>Long-Term Parking available for a mere $5,000/day</p>
+      <h1><a href="index.html">A Private Island Ice Resort</a></h1>
+      <ul>
+        <li><a href="accommodations.html">Accommodations</a></li>
+        <li><a href="activities.html">Activities</a></li>
+        <li><a href="travel.html">Travel Arrangements</a></li>
+        <li><a href="pictures.html">Photos</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+      <h2>Travel Arrangements</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque aliquam neque nec enim ultrices placerat. Cras mollis cursus elit id tincidunt. Nulla aliquet viverra mattis. Sed non sapien pulvinar, placerat justo nec, feugiat leo. Nullam egestas, ex pulvinar aliquam congue, mauris purus malesuada nisl, ac laoreet risus est vel sem. Praesent enim libero, efficitur vel purus in, convallis gravida mauris. Vivamus nec metus rhoncus, scelerisque tortor quis, fringilla neque. Maecenas vel felis molestie, fringilla lectus eu, egestas velit. Phasellus tincidunt arcu et massa sodales efficitur.</p>
     <img src="img/galleon.jpg" alt="a (replica of a) Spanish galleon in the ocean">
   </body>
+  <footer>
+      <p>
+          Would you like to stay with us, or do you have questions or comments? <a href="mailto:joe@example.com?subject=feedback">email us</a>
+      </p>
+  </footer>
 </html>
