--- a/accommodations.html
+++ b/accommodations.html
@@ -5,14 +5,15 @@
     <title>Private Island Ice Resort: Accommodations</title>
   </head>
   <body>
-    <h1>Accommodations</h1>
-    <ul>
-      <li><a href="index.html">Main</a></li>
-      <li><a href="activities.html">Activities</a></li>
-      <li><a href="travel.html">Travel Arrangements</a></li>
-      <li><a href="pictures.html">Photos</a></li>
-      <li><a href="contact.html">Contact Us</a></li>
-    </ul>
+      <h1><a href="index.html">A Private Island Ice Resort</a></h1>
+      <ul>
+        <li><a href="accommodations.html">Accommodations</a></li>
+        <li><a href="activities.html">Activities</a></li>
+        <li><a href="travel.html">Travel Arrangements</a></li>
+        <li><a href="pictures.html">Photos</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+      <h2>Accommodations</h2>
     <p>Here at the Private Island Ice Resort, we pride ourselves on having several different options to suit a variety of needs so long as those needs include spending copious amounts of money and being quite chilly while doing so: </p>
     <img src="img/icecave.jpg" alt="Image of an ice cave-actually in Iceland">
     <h3>You can choose from the following options: </h3>
@@ -32,4 +33,9 @@
       <li>Ice Cold WiFi</li>
     </ol>
   </body>
+  <footer>
+      <p>
+          Would you like to stay with us, or do you have questions or comments? <a href="mailto:joe@example.com?subject=feedback">email us</a>
+      </p>
+  </footer>
 </html>
