--- a/contact.html
+++ b/contact.html
@@ -5,21 +5,20 @@
     <title>Private Island Ice Resort: Contact</title>
   </head>
   <body>
-    <h1>Contact Us</h1>
-    <ul>
-      <li><a href="index.html">Main</a></li>
-      <li><a href="accommodations.html">Accommodations</a></li>
-      <li><a href="activities.html">Activities</a></li>
-      <li><a href="travel.html">Travel Arrangements</a></li>
-      <li><a href="pictures.html">Photos</a></li>
-    </ul>
-    <p>Would you like to stay with us, or do you have questions or comments? (Please note: complaints should be sent to the Polar Bear Petting Zoo, where they will be promptly eaten) Just send a carrier penguin or a dog sled team to the following address:
+      <h1><a href="index.html">A Private Island Ice Resort</a></h1>
+      <ul>
+        <li><a href="accommodations.html">Accommodations</a></li>
+        <li><a href="activities.html">Activities</a></li>
+        <li><a href="travel.html">Travel Arrangements</a></li>
+        <li><a href="pictures.html">Photos</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+      <h2>Contact Us</h2>
+    <p>Morbi lacus nisl, blandit at sollicitudin ac, lobortis ac turpis. Quisque quis molestie velit. Fusce vel enim convallis, varius sem sed, interdum nunc. Praesent convallis urna eget ipsum bibendum scelerisque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras sollicitudin ligula eleifend turpis elementum tempus. Nullam id venenatis nibh. Quisque commodo semper pretium. Nullam efficitur nibh a purus volutpat, porttitor pretium leo sodales. Sed vehicula turpis lectus, vel eleifend tortor sodales eu. Vivamus et erat mi.</p>
+    <p>Would you like to stay with us, or do you have questions or comments? <a href="mailto:joe@example.com?subject=feedback">email us</a>
     </p>
     <p>
-      Private Island Ice Resort<br>
-      1 Ice Way<br>
-      Iceville, FL 12345<br>
-      USA
+
     </p>
   </body>
 </html>
