--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>A Private Island Ice Resort</title>
   </head>
   <body>
-    <h1>A Private Island Ice Resort</h1>
+    <h1><a href="index.html">A Private Island Ice Resort</a></h1>
     <ul>
       <li><a href="accommodations.html">Accommodations</a></li>
       <li><a href="activities.html">Activities</a></li>
@@ -13,8 +13,13 @@
       <li><a href="pictures.html">Photos</a></li>
       <li><a href="contact.html">Contact Us</a></li>
     </ul>
-    <h2>For all of your totally legal resort needs.</h2>
+    <h2>For all of your resort needs.</h2>
     <img src="img/iceisland.jpg" alt="A photo of an ice island">
-    <p>Are you troubled by the giant piles of money all over your ridculously opulent mansion? Are you tired of simply using your excess money as a swimming pool? Do you also happen to hate sunshine and warmth? We have the perfect solution: our private winter getaway. Never be warm again; come visit us at the Private Island Ice Resort where we will keep the snow falling and the temperature below freezing. Sleep in an ice hut or play in a snowball fight, we have it all, except for sunshine.</p>
+    <p>Morbi lacus nisl, blandit at sollicitudin ac, lobortis ac turpis. Quisque quis molestie velit. Fusce vel enim convallis, varius sem sed, interdum nunc. Praesent convallis urna eget ipsum bibendum scelerisque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras sollicitudin ligula eleifend turpis elementum tempus. Nullam id venenatis nibh. Quisque commodo semper pretium. Nullam efficitur nibh a purus volutpat, porttitor pretium leo sodales. Sed vehicula turpis lectus, vel eleifend tortor sodales eu. Vivamus et erat mi.</p>
   </body>
+  <footer>
+      <p>
+          Would you like to stay with us, or do you have questions or comments? <a href="mailto:joe@example.com?subject=feedback">email us</a>
+      </p>
+  </footer>
 </html>
